--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-quarkus.rest-client.open-positions.url=https://www.barentswatch.no/bwapi/v2/geodata/ais/openpositions
-quarkus.rest-client.open-positions.scope=javax.inject.Singleton
+quarkus.rest-client.barents-watch-api.url=https://www.barentswatch.no/bwapi/v2/geodata/ais/openpositions
+quarkus.rest-client.barents-watch-api.scope=javax.inject.Singleton
+
+quarkus.rest-client.token-api.url=https://id.barentswatch.no/connect/token
+quarkus.rest-client.token-api.scope=javax.inject.Singleton
