--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ quarkus.rest-client.barents-watch-api.scope=javax.inject.Singleton
 
 quarkus.rest-client.token-api.url=https://id.barentswatch.no/connect/token
 quarkus.rest-client.token-api.scope=javax.inject.Singleton
+
+#quarkus.log.category."org.apache.http".level=DEBUG
