Added config property class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ quarkus.rest-client.token-api.url=https://id.barentswatch.no/connect/token
 quarkus.rest-client.token-api.scope=javax.inject.Singleton
 
 #quarkus.log.category."org.apache.http".level=DEBUG
+
+barents-watch.access.client-id=xxx
+barents-watch.access.scope=api
+barents-watch.access.client-secret=xxx
+barents-watch.access.grant-type=client_credentials
