Added property to schedule token access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ quarkus.rest-client.token-api.scope=javax.inject.Singleton
 
 #quarkus.log.category."org.apache.http".level=DEBUG
 
+barents-watch.token.scheduled.every=30m
 barents-watch.access.client-id=xxx
 barents-watch.access.scope=api
 barents-watch.access.client-secret=xxx
