Added security clients

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,15 @@ quarkus.rest-client.barents-watch-api.scope=javax.inject.Singleton
 quarkus.rest-client.token-api.url=https://id.barentswatch.no/connect/token
 quarkus.rest-client.token-api.scope=javax.inject.Singleton
 
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=barentswatch
+quarkus.datasource.password=barentswatch
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/barentswatch
+
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.http.auth.basic=true
+
 #quarkus.log.category."org.apache.http".level=DEBUG
 
 barents-watch.token.scheduled.every=30m
