Added functionality to generate access token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,15 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/barentswatch
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 
-quarkus.http.auth.basic=true
+quarkus.mongodb.connection-string=mongodb://localhost:27017
+quarkus.mongodb.database=barentswatch
+
+smallrye.jwt.verify.issuer=barentswatch
+smallrye.jwt.verify.expired-at.minutes=20
+smallrye.jwt.verify.key.location=publicKey.pem
+smallrye.jwt.sign.key.location=privateKey.pem
+
+quarkus.native.resources.includes=publicKey.pem
 
 #quarkus.log.category."org.apache.http".level=DEBUG
 
