Used properties of smallrye for lifespan and issuer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.mongodb.connection-string=mongodb://localhost:27017
 quarkus.mongodb.database=barentswatch
 
-smallrye.jwt.verify.issuer=barentswatch
-smallrye.jwt.verify.expired-at.minutes=20
+smallrye.jwt.new-token.issuer=barentswatch
+smallrye.jwt.new-token.lifespan=1800
 smallrye.jwt.verify.key.location=publicKey.pem
 smallrye.jwt.sign.key.location=privateKey.pem
 
