--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ barents-watch.access.client-id=xxx
 barents-watch.access.scope=api
 barents-watch.access.client-secret=xxx
 barents-watch.access.grant-type=client_credentials
+
+quarkus.http.auth.proactive=false
