--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/barentswatch
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 
+quarkus.mongodb.connection-string=mongodb://localhost:27017
+quarkus.mongodb.database=barentswatch
+
 smallrye.jwt.new-token.issuer=barentswatch
 smallrye.jwt.new-token.lifespan=1800
 smallrye.jwt.verify.key.location=publicKey.pem
