Enabled CORS for dev properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,6 @@ barents-watch.access.client-secret=xxx
 barents-watch.access.grant-type=client_credentials
 
 quarkus.http.auth.proactive=false
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
