--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "leaflet": "^1.7.1",
     "material-icons": "^1.10.5",
+    "moment": "^2.29.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
