--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,6 +27,8 @@ barents-watch.access.scope=api
 barents-watch.access.client-secret=xxx
 barents-watch.access.grant-type=client_credentials
 
+barents-watch.jwt.refresh-token.duration-seconds=86400
+
 quarkus.http.auth.proactive=false
 
 quarkus.http.cors=true
