--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.7.1",
     "material-icons": "^1.10.5",
     "moment": "^2.29.1",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
