Added register form

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+quarkus.locales=en_US
+quarkus.default-locale=en_US
+
 quarkus.rest-client.barents-watch-api.url=https://www.barentswatch.no/bwapi/v2/geodata/ais
 quarkus.rest-client.barents-watch-api.scope=javax.inject.Singleton
 
